Update rolling track to release the same version as the source distribution.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -309,4 +309,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/mavlink/mavlink.git
-    version: :{ask}
+    version: 2022.12.30
+    version_saved: :{ask}
