--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/mavlink
-	previous = 
-	base = dabd7ef5
+	previous = dabd7ef5
+	base = c0f44941
 	trim = 
 	trimbase = 
