--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/mavlink
-	previous = 
-	base = 82b9059e
+	previous = 82b9059e
+	base = 50e67edc
 	trim = 
 	trimbase = 
