--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/mavlink
-	previous = 
-	base = bf7ec2bd
+	previous = 3a343d46
+	base = 6ee3339e
 	trim = 
 	trimbase = 
