--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/mavlink
-	previous = 
-	base = 69285959
+	previous = 69285959
+	base = 9e67ede1
 	trim = 
 	trimbase = 
