--- a/tracks.yaml
+++ b/tracks.yaml
@@ -179,7 +179,8 @@ tracks:
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/mavlink/mavlink.git
-    version: :{ask}
+    version: 2022.12.30
+    version_saved: :{ask}
   jade:
     actions:
     - bloom-export-upstream :{vcs_local_uri} :{vcs_type} --tag :{release_tag} --display-uri
