Update iron track to release exactly last-released tag.

--- a/tracks.yaml
+++ b/tracks.yaml
@@ -175,7 +175,8 @@ tracks:
     patches: patch
     release_inc: '2'
     release_repo_url: null
-    release_tag: :{ask}
+    release_tag: master
+    release_tag_saved: :{ask}
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/mavlink/mavlink.git
