--- a/tracks.yaml
+++ b/tracks.yaml
@@ -175,8 +175,7 @@ tracks:
     patches: patch
     release_inc: '3'
     release_repo_url: null
-    release_tag: master
-    release_tag_saved: :{ask}
+    release_tag: :{ask}
     ros_distro: iron
     vcs_type: git
     vcs_uri: https://github.com/mavlink/mavlink.git
