--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"2022.12.30-3": ["Thu Apr 20 2023", "Vladimir Ermakov", "vooon341@gmail.com"], "2022.12.30-2": ["Tue Mar 21 2023", "Vladimir Ermakov", "vooon341@gmail.com"]}
+{"2023.6.6-1": ["Tue Jun 06 2023", "Vladimir Ermakov", "vooon341@gmail.com"], "2022.12.30-3": ["Thu Apr 20 2023", "Vladimir Ermakov", "vooon341@gmail.com"], "2022.12.30-2": ["Tue Mar 21 2023", "Vladimir Ermakov", "vooon341@gmail.com"]}
